tests/baselines/reference/scannerEnum1.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerEnum1.ts(1,17): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/scanner/ecmascript5/scannerEnum1.ts (1 errors) ====
        export enum CodeGenTarget {
                    ~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
            ES3 = 0,
            ES5 = 1,
        }